# django-namu

./: README.md  pyproject.toml
django_namu/: apps.py
