[tool.poetry]
name = "django-namu"
version = "0.1.0.dev0"
description = "A Django-based wiki software inspired by openNAMU"
authors = ["Joonhyung Shin <joon46551@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    { path = "tests", format = "sdist" }
]
repository = "https://github.com/joonhyungshin/django-namu"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5.0"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
